--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">MyCon</string>
     <string name="action_settings">Settings</string>
+
+
+
+    <string name="wifi_ssid">SSID</string>
+    <string name="wifi_connectedDevice_ip">123.456.789</string>
+
+
 </resources>
