--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,10 @@
 <resources>
     <string name="app_name">MyCon</string>
-    <string name="action_settings">Settings</string>
 
+
+    <!-- MENU -->
+    <string name="action_settings">Settings</string>
+    <string name="action_update">Update</string>
 
 
     <string name="wifi_ssid">SSID</string>
