--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <!-- MENU -->
     <string name="action_settings">Settings</string>
     <string name="action_update">Update</string>
+    <string name="action_about">About</string>
 
 
     <string name="wifi_ssid">SSID</string>
@@ -13,6 +14,8 @@
     <string name="wifi_connectedDevice_name">Name</string>
     <string name="wifi_connectedDevice_brand">Brand</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
