--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_update">Update</string>
     <string name="action_about">About</string>
+    <string name="action_record">Record</string>
 
     <!-- WIFI -->
     <string name="wifi_ssid">SSID</string>
